--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
     "dependencies": {
+        "email-validator": "^2.0.4",
+        "nativescript-gradient": "^2.0.1",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-vue": "~2.0.0",
         "tns-core-modules": "~5.2.0"
