--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
     "dependencies": {
+        "axios": "^0.18.0",
         "email-validator": "^2.0.4",
         "nativescript-gradient": "^2.0.1",
         "nativescript-theme-core": "~1.0.4",
