--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "nativescript-gradient": "^2.0.1",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-vue": "~2.0.0",
-        "tns-core-modules": "~5.2.0"
+        "tns-core-modules": "~5.2.0",
+        "vuex": "^3.1.0"
     },
     "devDependencies": {
         "@babel/core": "~7.1.0",
